* Avada Builder not compatible with new AUI styles, revert to legacy styles if active - FIXED
* Map bounce on listing hover is not working with bootstrap style - FIXED
* Lightbox gallery on mobile can vertically stretch images - FIXED
* Added filters to search input arguments - ADDED
* Divi visual editor shows "field key is missing" for badge - FIXED

= 2.1.0.4 =
* Load categories on map via AJAX - CHANGED
* Map with full page width shows scroll bar when toggle categories - FIXED
* OpenStreetMap add touchZoom map option - ADDED
* Preview page is not showing post images & tabs on Listimia theme - FIXED
* Kleo theme, remove force legacy styles if version >= 4.9.170 - CHANGED
* Video fields now support image screenshots in the GD > Post Images widget eg: video_screenshot - ADDED
* Category archive map shows all markers from category on bootstrap style - FIXED
* Some svg map markers are not resized due to unknown dimensions unit - FIXED
* Package category limit validation is not working - FIXED
* OpenStreetMap disable single finger dragging on touch devices - CHANGED

= 2.1.0.3 =
* Kleo & Listimia themes not compatible with new AUI styles, revert to legacy styles if active - FIXED
* Hide latitude/longitude still shows field labels - FIXED
* Business Hours field input mobile compatibility - FIXED

= 2.1.0.2 =
* Sort by options in GD > Listings widget not updating with post type change - FIXED
* Hummingbird object cache does not clears feature image cache - FIXED
* Post distance is not showing rounded value - FIXED
* Post images slider do not covers full width when only one image to display - FIXED
* GD ninja forms widget tries to open wrong lightbox for non AUI - FIXED
* Issue in save multiselect values with bootstrap active - FIXED
* Recent reviews widget image not rounded - FIXED
* Lazyload map category images natively - CHANGED
* Category widget CPT switcher not retaining all AUI styles on AJAX load - FIXED

= 2.1.0.0 =
* AyeCode UI Bootstrap design - ADDED