@@ -7,6 +7,7 @@
 * Lightbox gallery on mobile can vertically stretch images - FIXED
 * Added filters to search input arguments - ADDED
 * Divi visual editor shows "field key is missing" for badge - FIXED
+* Reviews, link to author profile instead of author URL input - CHANGED
 
 = 2.1.0.4 =
 * Load categories on map via AJAX - CHANGED
